tests/overloadedlists/should_fail/overloadedlistsfail01.hs
{-# LANGUAGE OverloadedLists #-}

main = print [1]  -- this will fail because there is no type defaulting implemented as of yet.
